--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   	<dependency>
   		<groupId>org.apache.taglibs</groupId>
   		<artifactId>taglibs-standard-impl</artifactId>
-  		<version>taglibs-standard-impl</version>
+  		<version>1.2.5</version>
   	</dependency>
   	<dependency>
   		<groupId>javax.servlet.jsp.jstl</groupId>
